# MADOLA

./: .gitignore  .gitmodules  Apache_License.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Development.md  LANGUAGE_GUIDE.md  README.md  config.json  dev.bat  dev.sh  example.mda  madola_runner.js  package-lock.json  package.json
.github/.workflows/: pages.yml
doc/: ARCHITECTURE.md  CMAKE_SYSTEM.md  DEPENDENCIES.md  README.md  SYMENGINE.md
docs/: BUILD_CONFIGURATION.md  CMAKE_SYSTEM.md  COMPARISON.md  DEPENDENCIES.md  FILE_BROWSER_COMPARISON.md  README.md  Ref.md  SYMENGINE.md  TODO.md  WASM_COMPLETE_GUIDE.md  interactive_debugging.md  source_map_debugging.md
electron/: FILE_BROWSER_README.md  README.md  main.js  package-lock.json  package.json  preload.js
mcp-server/: package.json
regression/: WASM_REGRESSION_TESTS.md  run_regression.bat  run_regression.sh
regression/expected/evaluation/: architectural_lengths.txt  differential.txt  equ_layout.txt  factorial.txt  for_loop.txt  import.txt  math_lib.txt  piecewise.txt  strings.txt  summation.txt  test_wasm_generator.txt  trigonometry.txt
regression/expected/html/: architectural_lengths.html  bolt_ecc.html  bolt_ecc_expand.html  dichotomy.html  differential.html  equ_layout.html  example.html  factorial.html  for_loop.html  gcd.html  import.html  latex_variables.html  logical_ops.html  math_lib.html  matrix.html  piecewise.html  simpson.html  strings.html  summation.html  test_wasm_generator.html  text.html  trigonometry.html  wasm_import.html
regression/expected_wasm/evaluation/: example.txt  example_boltecc.txt  import.txt  latex_variables.txt  matrix.txt  text.txt  wasm_import.txt
regression/expected_wasm/html/: bolt_ecc.html  dichotomy.html  equ_layout.html  example.html  factorial.html  for_loop.html  gcd.html  import.html  latex_variables.html  logical_ops.html  math_lib.html  matrix.html  piecewise.html  simpson.html  summation.html  test_wasm_generator.html  text.html  trigonometry.html  wasm_import.html
regression/fixtures/: architectural_lengths.mda  bolt_ecc.mda  bolt_ecc_expand.mda  dichotomy.mda  differential.mda  equ_layout.mda  example.mda  example_boltecc.mda  factorial.mda  for_loop.mda  gcd.mda  import.mda  latex_variables.mda  logical_ops.mda  math_lib.mda  matrix.mda  piecewise.mda  simpson.mda  strings.mda  summation.mda  test_wasm_generator.mda  text.mda  trigonometry.mda  wasm_import.mda
regression/fixtures/testWasm/: testDouble.js  testSquare.js
scripts/: generate_css_header.js
src/: debug_main.cpp  main.cpp  wasm_interface.cpp
src/core/: tree_sitter_madola.h
src/core/ast/: ast.h  ast_builder.h  ast_builder_expressions.cpp  ast_builder_statements.cpp
src/core/debug/: debug_cli.cpp  debug_cli.h  error_reporting.cpp  error_reporting.h  interactive_debugger.cpp  interactive_debugger.h  source_map.cpp  source_map.h
src/core/evaluator/: evaluator.cpp  evaluator.h  evaluator_environment.cpp  evaluator_expressions.cpp  evaluator_functions.cpp  evaluator_matrix.cpp  evaluator_symbolic.cpp
src/core/generator/: cpp_generator.cpp  cpp_generator.h  html_formatter.h  html_formatter_content.cpp  html_formatter_helpers.cpp  html_formatter_methods.cpp  markdown_formatter.cpp  markdown_formatter.h  unit_system.cpp  unit_system.h  wasm_addon_loader.cpp  wasm_addon_loader.h  wasm_generator.cpp  wasm_generator.h
src/core/utils/: paths.h
tauri/: .gitignore  Cargo.toml  FILE_BROWSER_README.md  README.md  create-icon.ps1  package-lock.json  package.json  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: main.rs
tests/: basic_assignment.mda  calc_pi.mda  index.html  test_runner.cpp
tree-sitter-madola/: grammar.js  package.json  tree-sitter.json
tree-sitter-madola/src/: grammar.json  node-types.json  parser.c
web/: FILE_BROWSER_README.md  README.md  WASM_FIX_README.md  compile_wasm.js  index.html  serve.bat  serve.js  serve.py  setup_info.sh
web/css/: base.css  components.css  madola-output.css  print.css  responsive.css
web/examples/: brick_3d.mda  calculate_pi.mda  decorators.mda  example.mda  factorial.mda  for_loop.mda  gcd.mda  graph_3d.mda  graph_test.mda  latex_variables.mda  matrix_vector.mda  piecewise.mda  quadratic_solver.mda  string_concat.mda  summation.mda  trigonometry.mda  units.mda  wasm_import.mda
web/js/: app-core.js  app-execution.js  app-file-browser.js  app-sidebar.js  app-ui.js  app.js  madola-browser.js  madola-language.js  madola-worker.js
web/runtime/: madola.js  madola.wasm
