[package]
name = "madola-tauri"
version = "1.0.0"
description = "MADOLA Math Domain Language Editor - Desktop Application"
authors = ["MADOLA Team"]
license = "MIT"
repository = "https://github.com/madola/madola"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
